--- a/resume_project/assets/css/not_main.css
+++ b/resume_project/assets/css/not_main.css
@@ -69,7 +69,7 @@ a{
 .bg-grey{background-color: var(--clr-grey);}
 .bg-white{background-color: var(--clr-white);}
 .bg-black{background-color: var(--clr-black);}
-.bg-green{background-color: var(--clr-green);}
+.bg-green{background-color: #000000c2;}
 
 .text-center{ text-align: center;}
 .text-left{text-align: left;}
@@ -547,7 +547,7 @@ textarea{
 .experiences-items.preview-blk-list .preview-item span:nth-child(4),
 .experiences-items.preview-blk-list .preview-item span:nth-child(5){
     margin-right: 1rem;
-    background-color: var(--clr-green);
+    background-color: #000000;
     color: var(--clr-white);
     padding: 0 1rem;
     border-radius: 0.6rem;
